@@ -1,0 +1,337 @@
+/*  GIMP header image file format (INDEXED): /tmp/icon32x32.h  */
+
+static unsigned int width = 32;
+static unsigned int height = 32;
+
+/*  Call this macro repeatedly.  After each use, the pixel data can be extracted  */
+
+#define HEADER_PIXEL(data,pixel) {\
+  pixel[0] = header_data_cmap[(unsigned char)data[0]][0]; \
+  pixel[1] = header_data_cmap[(unsigned char)data[0]][1]; \
+  pixel[2] = header_data_cmap[(unsigned char)data[0]][2]; \
+  data ++; }
+
+static char header_data_cmap[256][3] = {
+	{  0,128,128},
+	{ 34, 34, 34},
+	{  0,  0,  0},
+	{119,119,119},
+	{160,160,164},
+	{134,134,134},
+	{ 66, 66, 66},
+	{102,102,102},
+	{204,204,204},
+	{192,192,192},
+	{150,150,150},
+	{215,215,215},
+	{ 95, 95, 95},
+	{178,178,178},
+	{ 57, 57, 57},
+	{ 28, 28, 28},
+	{ 41, 41, 41},
+	{ 85, 85, 85},
+	{ 22, 22, 22},
+	{221,221,221},
+	{ 51, 51, 51},
+	{ 77, 77, 77},
+	{153,153,153},
+	{227,227,227},
+	{234,234,234},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255},
+	{255,255,255}
+	};
+static char header_data[] = {
+	0,0,0,0,0,0,0,0,0,0,0,0,0,1,2,2,
+	2,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,2,2,1,3,4,
+	5,6,2,2,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,2,2,7,8,9,9,
+	9,8,10,2,2,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,2,6,11,9,5,12,
+	4,8,8,3,2,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,2,2,13,9,4,14,2,
+	15,13,9,4,15,2,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,2,14,9,9,7,2,0,
+	2,6,8,9,7,2,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,2,5,9,13,14,2,0,
+	2,2,4,9,4,2,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,2,5,9,9,16,0,0,
+	0,2,10,9,13,2,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,2,17,9,9,18,0,0,
+	0,2,13,9,4,2,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,2,14,8,13,16,0,0,
+	0,2,8,9,7,2,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,2,2,11,8,17,2,0,
+	2,18,19,9,20,2,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,2,5,8,5,2,0,
+	2,21,8,10,2,2,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,2,18,9,4,16,2,
+	2,9,9,14,2,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,2,2,2,2,2,2,17,8,9,18,
+	10,8,3,2,2,2,2,2,2,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,2,10,4,4,22,4,4,13,8,9,
+	23,4,13,4,4,4,13,5,1,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,2,15,8,19,8,4,10,22,13,19,
+	8,10,4,8,11,8,8,8,2,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,2,12,5,14,2,2,2,3,11,
+	8,2,2,2,16,12,5,2,2,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,2,2,2,2,2,0,2,7,23,
+	8,2,0,2,2,2,2,2,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,0,2,3,19,
+	8,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,0,2,3,23,
+	8,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,0,2,5,23,
+	11,18,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,0,2,10,19,
+	11,18,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,0,2,4,23,
+	11,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,0,2,11,19,
+	8,14,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,2,1,24,19,
+	11,17,2,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,2,3,19,19,
+	11,4,2,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,18,8,11,11,
+	11,11,6,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,1,4,11,8,
+	11,5,16,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,2,2,10,8,
+	5,18,2,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,0,2,18,9,
+	20,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,6,
+	2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+	0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,
+	0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+	};
